# Gestor_2000

./: .gitignore  README.md  RESUMO_FINAL.md  calcular_metricas.py  pyproject.toml  run.py
arquivos_projeto/: README.md  parte3_arquitetura.md
arquivos_projeto/parte1_pipeline/: ENUNCIADO.md
arquivos_projeto/parte1_pipeline/dados/: clientes_legado.csv  pagamentos_legado.csv  pedidos_legado.csv
arquivos_projeto/parte2_tuning/: ENUNCIADO.md  explain_outputs.md  queries.sql  schema.sql
src/gestor_2000/: config.py  database.py
src/gestor_2000/parte_01/: DATA_QUALITY.md  README.md  analise_exploratoria.py  calcular_metricas.py  executar_pipeline.py
src/gestor_2000/parte_01/doc/: 1_ANALISE_PROBLEMAS.md
src/gestor_2000/parte_01/pipe/: tratar_clientes.py  tratar_pagamentos.py  tratar_pedidos.py  utils.py
src/gestor_2000/parte_01/schema/: schema.sql
src/gestor_2000/parte_02/: README.md  TUNING.md
src/gestor_2000/parte_03/: ARQUITETURA.md  README.md
