[project]
name = "gestor-2000"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo-Kimura-Data",email = "marcelo.kimura.data@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[tool.poetry]
packages = [{include = "gestor_2000", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
