[project]
name = "gestor-2000"
version = "0.1.0"
description = "Pipeline de migração de dados legados para PostgreSQL com validação e normalização"
authors = [
    {name = "Marcelo-Kimura-Data", email = "marcelo.kimura.data@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "mypy>=1.0.0,<2.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
]

[tool.poetry]
packages = [{include = "gestor_2000", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
